<resources>
    <!--Top Bar titles-->
    <string name="app_name" translatable="false">ndnMouse</string>
    <string name="settings_label">Settings</string>
    <string name="mouse_label">Mouse</string>
    <string name="keyboard_label">Keyboard</string>

    <!--Main Activity-->
    <string name="title_image_description">ndnMouse Title Image</string>
    <string name="start_button">START SERVER</string>
    <string name="server_name">ADDRESS</string>
    <string name="server_password">PASSWORD</string>
    <string name="protocol_label">PROTOCOL</string>
    <string name="ndn_label">NDN</string>
    <string name="alt_protocol_label">UDP</string>
    <string name="address_placeholder" translatable="false">254.254.254.254</string>
    <string name="radio_button_ndn_setting" translatable="false">radio_button_ndn_setting</string>
    <string name="port_label">PORT</string>
    <string name="default_port" translatable="false">10888</string>
    <string name="intent_extra_port" translatable="false">EXTRA_PORT</string>
    <string name="intent_extra_password" translatable="false">EXTRA_PASSWORD</string>
    <string name="intent_extra_protocol" translatable="false">EXTRA_PROTOCOL</string>
    <string name="option_button_desc">OPTIONS</string>
    <string name="ndn_port" translatable="false">6363</string>
    <string name="udp_port" translatable="false">10888</string>

    <!--Mouse Activity-->
    <string name="left_click_label">LEFT CLICK</string>
    <string name="right_click_label">RIGHT CLICK</string>
    <string name="touchpad_label">TOUCHPAD</string>
    <string name="action_settings">Settings</string>
    <string name="action_left_click_down" translatable="false">C_left_D</string>
    <string name="action_left_click_up" translatable="false">C_left_U</string>
    <string name="action_right_click_down" translatable="false">C_right_D</string>
    <string name="action_right_click_up" translatable="false">C_right_U</string>
    <string name="action_left_click_full" translatable="false">C_left_F</string>
    <string name="action_keyboard">Keyboard</string>
    <string name="intent_extra_server" translatable="false">EXTRA_SERVER</string>

    <!--Keyboard Protocol and Labels-->
    <string name="keyboard_up_label" translatable="false">▲</string>
    <string name="keyboard_down_label" translatable="false">▼</string>
    <string name="keyboard_left_label" translatable="false">◀</string>
    <string name="keyboard_right_label" translatable="false">▶</string>
    <string name="keyboard_space_label">SPACEBAR</string>
    <string name="keyboard_custom_type_label">…</string>
    <string name="keyboard_delete_label">⌫</string>
    <string name="keyboard_return_label">⏎</string>
    <string name="keyboard_escape_label">ESC</string>
    <string name="keyboard_custom_type_alert_title">Custom Typed Message</string>
    <string name="keyboard_custom_type_alert_message">Enter a string to type on client devices</string>
    <string name="action_custom_type" translatable="false">T</string>
    <string name="action_keypress_up_arrow_down" translatable="false">K_up_D</string>
    <string name="action_keypress_up_arrow_up" translatable="false">K_up_U</string>
    <string name="action_keypress_down_arrow_down" translatable="false">K_down_D</string>
    <string name="action_keypress_down_arrow_up" translatable="false">K_down_U</string>
    <string name="action_keypress_left_arrow_down" translatable="false">K_left_D</string>
    <string name="action_keypress_left_arrow_up" translatable="false">K_left_U</string>
    <string name="action_keypress_right_arrow_down" translatable="false">K_right_D</string>
    <string name="action_keypress_right_arrow_up" translatable="false">K_right_U</string>
    <string name="action_keypress_spacebar_down" translatable="false">K_space_D</string>
    <string name="action_keypress_spacebar_up" translatable="false">K_space_U</string>
    <string name="action_keypress_return_down" translatable="false">K_return_D</string>
    <string name="action_keypress_return_up" translatable="false">K_return_U</string>
    <string name="action_keypress_delete_down" translatable="false">K_bspace_D</string>
    <string name="action_keypress_delete_up" translatable="false">K_bspace_U</string>
    <string name="action_keypress_escape_down" translatable="false">K_esc_D</string>
    <string name="action_keypress_escape_up" translatable="false">K_esc_U</string>

    <!--Settings Activity-->
    <string name="pref_tap_to_left_click_label">Tap to Left Click</string>
    <string name="pref_movement_label">Movement</string>
    <string name="pref_move_rel_label">Relative</string>
    <string name="pref_move_abs_label">Absolute</string>
    <string name="pref_precision_label">Movement Pixel Precision</string>
    <string name="pref_sensitivity_label">Movement Sensitivity</string>
    <string name="pref_scroll_direction_label">Scrolling Direction</string>
    <string name="pref_scroll_normal_label">Normal</string>
    <string name="pref_scroll_inverted_label">Inverted</string>
    <string name="pref_scroll_sensitivity_label">Scrolling Sensitivity</string>

    <!--Preference Key/Values-->
    <string name="pref_tap_to_left_click_key" translatable="false">pref_tap_to_left_click</string>
    <string name="pref_movement_key" translatable="false">pref_movement</string>
    <string name="pref_movement_default" translatable="false">move_relative</string>
    <string name="pref_move_rel_value" translatable="false">move_relative</string>
    <string name="pref_move_abs_value" translatable="false">move_absolute</string>
    <string name="pref_sensitivity_key" translatable="false">pref_move_sensitivity</string>
    <string name="pref_sensitivity_default" translatable="false">1.5</string>
    <string name="pref_precision_key" translatable="false">pref_move_precision</string>
    <string name="pref_precision_default" translatable="false">5</string>
    <string name="pref_scroll_direction_key" translatable="false">pref_scrolling_direction</string>
    <string name="pref_scroll_normal_value" translatable="false">scroll_normal</string>
    <string name="pref_scroll_inverted_value" translatable="false">scroll_inverted</string>
    <string name="pref_scroll_direction_default" translatable="false">scroll_normal</string>
    <string name="pref_scroll_sensitivity_key" translatable="false">pref_scroll_sensitivity</string>
    <string name="pref_scroll_sensitivity_default" translatable="false">.5</string>

    <!--Communication Protocol-->
    <string name="protocol_move_absolute" translatable="false">A</string>
    <string name="protocol_move_relative" translatable="false">M</string>
    <string name="protocol_move_scrolling" translatable="false">S</string>
    <string name="protocol_opening_request" translatable="false">OPEN</string>
    <string name="protocol_open_ack" translatable="false">OPEN-ACK</string>
    <string name="protocol_heartbeat_request" translatable="false">HEART</string>
    <string name="protocol_heartbeat_ack" translatable="false">BEAT</string>
    <string name="protocol_update_seq_request" translatable="false">SEQ</string>
    <string name="protocol_update_seq_reply" translatable="false">SEQ-ACK</string>
    <string name="protocol_closing_request" translatable="false">CLOSE</string>

    <!--ServerNDN-->
    <string name="ndn_prefix_mouse_move" translatable="false">/ndnmouse/move</string>
    <string name="ndn_prefix_mouse_command" translatable="false">/ndnmouse/command</string>
    <string name="ndn_prefix_update_seq" translatable="false">/ndnmouse/seq</string>
    <string name="ndn_prefix_salt" translatable="false">/ndnmouse/salt</string>
    <string name="ndn_prefix_identity" translatable="false">/ndnmouse/identity</string>

</resources>
