<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="@bool/pref_tap_to_left_click_default"
        android:key="@string/pref_tap_to_left_click_key"
        android:title="@string/pref_tap_to_left_click_label" />

    <ListPreference
        android:defaultValue="@string/pref_sensitivity_default"
        android:entries="@array/pref_sensitivity_labels"
        android:entryValues="@array/pref_sensitivity_values"
        android:key="@string/pref_sensitivity_key"
        android:title="@string/pref_sensitivity_label" />

    <EditTextPreference
        android:defaultValue="@string/pref_precision_default"
        android:inputType="number"
        android:key="@string/pref_precision_key"
        android:title="@string/pref_precision_label" />

    <ListPreference
        android:defaultValue="@string/pref_scroll_direction_default"
        android:entries="@array/pref_scroll_direction_labels"
        android:entryValues="@array/pref_scroll_direction_values"
        app:key="@string/pref_scroll_direction_key"
        android:title="@string/pref_scroll_direction_label" />

    <ListPreference
        android:defaultValue="@string/pref_scroll_sensitivity_default"
        android:entries="@array/pref_scroll_sensitivity_labels"
        android:entryValues="@array/pref_scroll_sensitivity_values"
        android:key="@string/pref_scroll_sensitivity_key"
        android:title="@string/pref_scroll_sensitivity_label" />

</PreferenceScreen>