<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ucla.cs.ndnmouse.KeyboardActivity">

    <TextView
        android:id="@+id/tv_keyboard_touchpad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/b_up_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background"
        android:text="@string/touchpad_label"
        android:textSize="30sp" />

    <Button
        android:id="@+id/b_spacebar"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:text="@string/keyboard_space_label"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/b_left_arrow"
        app:layout_constraintRight_toRightOf="@+id/b_right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/b_right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyboard_right_label"
        android:textSize="36sp"
        app:layout_constraintLeft_toRightOf="@+id/b_down_arrow"
        app:layout_constraintTop_toTopOf="@+id/b_down_arrow" />

    <Button
        android:id="@+id/b_up_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyboard_up_label"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/b_down_arrow" />

    <Button
        android:id="@+id/b_down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:text="@string/keyboard_down_label"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/b_spacebar"
        app:layout_constraintLeft_toLeftOf="@+id/b_up_arrow" />

    <Button
        android:id="@+id/b_left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyboard_left_label"
        android:textSize="36sp"
        app:layout_constraintRight_toLeftOf="@+id/b_down_arrow"
        app:layout_constraintTop_toTopOf="@+id/b_down_arrow" />

</android.support.constraint.ConstraintLayout>
