<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
    android:id="@+id/viewFlipper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/ll_main"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.ucla.cs.ndnmouse.MainActivity"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/tv_touchpad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight=".15"
            android:background="@drawable/background"
            android:gravity="center"
            android:text="@string/touchpad_label"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_weight=".85">

            <Button
                android:id="@+id/b_left_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight=".5"
                android:text="@string/left_click_label"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b_right_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight=".5"
                android:text="@string/right_click_label"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.ucla.cs.ndnmouse.KeyboardActivity">

        <TextView
            android:id="@+id/tv_keyboard_status"
            android:layout_width="0dp"
            android:layout_height="257dp"
            android:layout_marginTop="-5dp"
            android:gravity="center"
            android:text=""
            android:textSize="40sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <Button
            android:id="@+id/b_spacebar"
            android:layout_width="264dp"
            android:layout_height="64dp"
            android:layout_marginTop="33dp"
            android:text="@string/keyboard_space_label"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="@+id/b_left_arrow"
            app:layout_constraintTop_toBottomOf="@+id/b_down_arrow"
            app:layout_constraintRight_toRightOf="@+id/b_right_arrow"
            app:layout_constraintHorizontal_bias="0.0" />

        <Button
            android:id="@+id/b_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_right_label"
            android:textSize="36sp"
            app:layout_constraintLeft_toRightOf="@+id/b_down_arrow"
            app:layout_constraintTop_toTopOf="@+id/b_down_arrow" />

        <Button
            android:id="@+id/b_up_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_up_label"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="335dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/b_down_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_down_label"
            android:textSize="36sp"
            app:layout_constraintTop_toBottomOf="@+id/b_up_arrow"
            app:layout_constraintLeft_toLeftOf="@+id/b_up_arrow" />

        <Button
            android:id="@+id/b_left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_left_label"
            android:textSize="36sp"
            app:layout_constraintRight_toLeftOf="@+id/b_down_arrow"
            app:layout_constraintTop_toTopOf="@+id/b_down_arrow" />

    </android.support.constraint.ConstraintLayout>

</ViewFlipper>


