<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.ucla.cs.ndnmouse.MouseActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/tv_protocol_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:gravity="start|center_vertical"
        android:text="@string/protocol_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/b_start"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_address_label"
        app:layout_constraintRight_toRightOf="@+id/tv_password_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

    <Button
        android:id="@+id/b_start"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_protocol_label"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_address_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:gravity="start|center_vertical"
        android:text="@string/server_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_port_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/tv_password_label"
        app:layout_constraintTop_toBottomOf="@+id/iv_title"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/address_placeholder"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_address_label"
        app:layout_constraintTop_toTopOf="@+id/tv_address_label"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_port_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:gravity="start|center_vertical"
        android:text="@string/port_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_password_label"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_address_label"
        app:layout_constraintRight_toRightOf="@+id/tv_password_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_label" />

    <TextView
        android:id="@+id/et_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/default_port"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_port_label"
        app:layout_constraintLeft_toLeftOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="@+id/tv_port_label"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_password_label"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:gravity="start|center_vertical"
        android:text="@string/server_password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_protocol_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_address_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_port_label"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_password_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_password_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_password_label"
        app:layout_constraintVertical_bias="0.0">

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/rg_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_protocol_label"
        app:layout_constraintTop_toTopOf="@+id/tv_protocol_label"
        app:layout_constraintLeft_toRightOf="@+id/tv_protocol_label"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_password">

        <RadioButton
            android:id="@+id/rb_ndn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/ndn_label"
            android:textColor="?android:attr/textColorTertiary"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_udp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/alt_protocol_label"
            android:textColor="?android:attr/textColorTertiary"
            android:textSize="24sp" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/b_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@mipmap/settings_icon"
        android:contentDescription="@string/option_button_desc" />

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/title"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_address_label"
        app:layout_constraintHorizontal_bias="0.5"
        android:contentDescription="@string/title_image_description"
        app:layout_constraintVertical_chainStyle="spread"
        android:layout_marginBottom="10dp"
        app:layout_constraintVertical_bias="0.3"/>

</android.support.constraint.ConstraintLayout>
