<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ucla.cs.ndnmouse.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/tv_touch_pad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/back"
        android:gravity="center"
        android:text="@string/touchpad_label"
        android:layout_weight=".15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight=".85">

        <Button
            android:id="@+id/b_left_click"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight=".5"
            android:text="@string/left_click_label" />

        <Button
            android:id="@+id/b_right_click"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight=".5"
            android:text="@string/right_click_label" />

    </LinearLayout>


</LinearLayout>
